# opensim-moco

./: .appveyor.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  appveyor.yml  build_on_linux.sh
Moco/Examples/C++/: CMakeLists.txt
Moco/Examples/C++/example2DGaitPrediction/: CMakeLists.txt  coordinateTracking_MusclePolynomials_solution.sto  coordinateTracking_MusclePolynomials_withPassiveForces_solution.sto  coordinateTracking_MusclePolynomials_withoutPassiveForces_solution.sto  coordinateTracking_Muscles_solution.sto  coordinateTracking_solution.sto  example2DGaitPrediction.cpp  gait10dof18musc.osim  gait10dof18musc_MuscleGeometryPath_withPassiveForces.osim  gait10dof18musc_MusclePolynomials_withPassiveForces.osim  gait10dof18musc_MusclePolynomials_withoutPassiveForces.osim
Moco/Examples/C++/example2DWalking/: CMakeLists.txt  example2DWalking.cpp  example2DWalkingMetabolics.cpp
Moco/Examples/C++/example3DWalking/: coordinates.sto  exampleMocoInverse.cpp  exampleMocoTrack.cpp  subject_walk_armless.osim
Moco/Examples/C++/exampleCoordinateTracking/: CMakeLists.txt  exampleCoordinateTracking.cpp  gait10dof18musc_MusclePolynomials.osim
Moco/Examples/C++/exampleCoordinateTrackingSymmetry/: CMakeLists.txt  exampleCoordinateTrackingSymmetry.cpp  (+4 more)
MuscleRedundancySolver/: CMakeLists.txt
MuscleRedundancySolver/MuscleRedundancySolver/: DeGroote2016Muscle.h
MuscleRedundancySolver/tests/: CMakeLists.txt  testSingleMuscleDeGroote2016.cpp  testSingleMuscleDeGroote2016MomentArms.cpp  testTwoParallelMusclesDeGroote2016.cpp  testing.h
(+324 files in other folders)
