add_subdirectory(exampleSlidingMass)
add_subdirectory(exampleSlidingMassAdvanced)
add_subdirectory(exampleTracking)
add_subdirectory(exampleMarkerTracking)
add_subdirectory(exampleMocoTrack)
add_subdirectory(examplePredictive)
add_subdirectory(exampleTrackingMuscle)
add_subdirectory(exampleTrackingTorque)
add_subdirectory(exampleTrackingTorqueEndpoints)
add_subdirectory(examplePredictiveTorqueEndpoints)
add_subdirectory(exampleTrackingMuscleEndpoints)
add_subdirectory(exampleTrackingMusclePolyEndpoints)
add_subdirectory(examplePredictiveMusclePolyEndpoints)
